add attributes dropdown

--- a/app/views/partials/lib/commands/contacts/create/build.liquid
+++ b/app/views/partials/lib/commands/contacts/create/build.liquid
@@ -4,7 +4,8 @@
     "email": {{ object.email | json }},
     "message": {{ object.message | json }},
     "reason": {{ object.reason | json }},
-    "dob": {{ object.dob | json }}
+    "dob": {{ object.dob | json }},
+    "attribute": {{ object.attribute | json }}
   }
 {% endparse_json %}
 
