--- a/app/views/partials/theme/simple/contacts/show.liquid
+++ b/app/views/partials/theme/simple/contacts/show.liquid
@@ -24,4 +24,9 @@
   </div>
   {{ contact.dob }}
 
+  <div class="mt-5 font-medium">
+    {{ 'app.models.contacts.form.attributes' | t }}
+  </div>
+  {{ contact.attribute }}
+
 </article>
