--- a/app/views/partials/theme/simple/contacts/index.liquid
+++ b/app/views/partials/theme/simple/contacts/index.liquid
@@ -3,6 +3,8 @@
 		<div class="lg:w-1/6">{{ 'app.models.contacts.form.email' | t }}</div>
 		<div class="lg:w-1/6">{{ 'app.models.contacts.form.reason' | t }}</div>
 		<div class="lg:w-3/6">{{ 'app.models.contacts.form.message' | t }}</div>
+    <div class="lg:w-1/6">{{ 'app.models.contacts.form.dob' | t }}</div>
+    <div class="lg:w-1/6">{{ 'app.models.contacts.form.attributes' | t }}</div>
 		<div class="lg:w-1/6"></div>
   </header>
 
@@ -24,6 +26,18 @@
         <span class="lg:hidden">{{ 'app.models.contacts.form.message' | t }}: </span>
         <a href="/admin/support-tickets/show/{{ contact.id }}">
           {{ contact.message | truncatewords: 30 }}
+        </a>
+      </div>
+      <div class="lg:w-1/6">
+        <span class="lg:hidden">{{ 'app.models.contacts.form.dob' | t }}: </span>
+        <a href="/admin/support-tickets/show/{{ contact.id }}">
+          {{ contact.dob | truncatewords: 30 }}
+        </a>
+      </div>
+      <div class="lg:w-1/6">
+        <span class="lg:hidden">{{ 'app.models.contacts.form.attribute' | t }}: </span>
+        <a href="/admin/support-tickets/show/{{ contact.id }}">
+          {{ contact.attribute | truncatewords: 30 }}
         </a>
       </div>
       <div class="mt-2 lg:mt-0 lg:w-1/6">
