--- a/app/views/pages/dashboard/profile/update.liquid
+++ b/app/views/pages/dashboard/profile/update.liquid
@@ -6,8 +6,12 @@ method: put
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
   include 'lib/profile_present_or_redirect', profile: current_profile, require_profile: false
 
+  echo context.params.profile
+
   function object = 'lib/commands/profiles/update', object: context.params.profile, profile: current_profile
+  log object
   if object.valid
+    log object
     include 'lib/commands/events/create', type: 'profile_updated', actor_id: object.id
 
     function profile = 'lib/queries/profiles/find', user_id: context.current_user.id
