--- a/app/views/partials/lib/commands/profiles/update/build.liquid
+++ b/app/views/partials/lib/commands/profiles/update/build.liquid
@@ -23,7 +23,9 @@
     "slug":       {{ slug | json }},
     "first_name": {{ object.first_name | json }},
     "last_name":  {{ object.last_name | json }},
-    "bio":        {{ object.bio | json }}
+    "bio":        {{ object.bio | json }},
+    "dob":        {{ object.dob | json }},
+    "attribute":  {{ object.attribute | json }}
   }
 {% endparse_json %}
 
